# faddnsc

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Justfile  LIST.md  README.md  atxpkg_backup  compile.bat  compile.sh  compile_podman.sh  compile_win.sh  faddnsc  faddnsc_gui  osv-scanner.toml  setup.py  setup_win.py  upload.sh
.cargo/: config.toml
etc/: faddnsc.service
faddns/: __init__.py  cfg.py
pkg_data/faddnsc/: install_service.bat  remove_service.bat
src/: cfg.rs  main.rs
