[package]
name = "faddnsc"
version = "10.1.0"
edition = "2021"
rust-version = "1.74" # 1.75 in ubuntu focal, 1.77 to last support win7
license = "PROPRIETARY"
authors = ["Radek Podgorny <radek@podgorny.cz>"]

[package.metadata.deb]
revision = "3"  # TODO: remove on next release
maintainer = "Radek Podgorny <radek@podgorny.cz>"
assets = [
  ["target/release/faddnsc", "usr/bin/", "755"],
  ["etc/faddnsc.conf", "etc/", "644"],
  ["etc/faddnsc.service", "usr/lib/systemd/system/", "644"],
]

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
clap = { version = "4.5.23", features = ["derive"] }
hostname = "0.4.0"
local-ip-address = "0.6.3"
log = "0.4.22"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
rust-ini = "0.21.1"
simplelog = "0.12.2"
time = { version = "0.3.37", features = ["macros", "local-offset"] }
ureq = "2.12.1"
url = "2.5.4"

[profile.release.package."*"]
debug = false

[profile.release]
debug = "line-tables-only"
codegen-units = 1
lto = true
