[package]
name = "faddnsc"
version = "10.1.0"
edition = "2021"
rust-version = "1.93"
license = "PROPRIETARY"
authors = ["Radek Podgorny <radek@podgorny.cz>"]

[package.metadata.deb]
revision = "3"  # TODO: remove on next release
maintainer = "Radek Podgorny <radek@podgorny.cz>"
assets = [
  ["target/release/faddnsc", "usr/bin/", "755"],
  ["etc/faddnsc.conf", "etc/", "644"],
  ["etc/faddnsc.service", "usr/lib/systemd/system/", "644"],
]

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
clap = { version = "4.5.48", features = ["derive"] }
hostname = "0.4.1"
local-ip-address = "0.6.5"
log = "0.4.28"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
rust-ini = "0.21.3"
simplelog = "0.12.2"
time = { version = "0.3.41", features = ["macros", "local-offset"] }
ureq = "3.1.2"
url = "2.5.7"

[profile.release.package."*"]
debug = false

[profile.release]
debug = "line-tables-only"
codegen-units = 1
lto = true
